# CC

./: .gitignore  LICENSE  README.md  pyproject.toml  pyvenv.cfg  server.sqlite  tasks.json  test.py
.github/workflows/: lint.yml
CC/structs/: Command.py  IPOutput.py  IPerfOutput.py  MessageTask.py
CORE/: Dockerfile  README.md  core.sh  prefs.conf
agent/: IPerfServer.py  Orchestrator.py  __main__.py
common/: AlertFlow.py  NetTask.py  NetTaskConnection.py  __init__.py
common/structs/: AlertFlow.py  Command.py  CommandTests.py  IPCommand.py  IPOutput.py  IPerfCommand.py  IPerfOutput.py  Message.py  MessagePrepare.py  MessageRegister.py  MessageTask.py  MessageTasksRequest.py  MessageTests.py  NetTaskAckSegmentBody.py  NetTaskCloseSegmentBody.py  NetTaskDataSegmentBody.py  NetTaskKeepAliveSegmentBody.py  NetTaskSegment.py  NetTaskSegmentBody.py  NetTaskSegmentTests.py  NetTaskWindowSegmentBody.py  PingCommand.py  PingOutput.py  SystemMonitor.py  SystemMonitorCommand.py  SystemMonitorOutput.py
server/: Database.py  DatabaseTests.py  HTTPBackend.py  TasksParser.py  __init__.py  __main__.py  json_parser.py
server/www/: 404.html  index.css  index.html  index.js
