[build-system]
    requires = [ "setuptools", "wheel" ]
    build-backend = "setuptools.build_meta"

[project]
    name = "CC"
    description = "UMinho's 2024/25 Computer Communication class assignment"
    version = "0.0.1"

    authors = [
        { name = "Afonso Santos", email = "a104276@alunos.uminho.pt" },
        { name = "Humberto Gomes", email = "a104348@alunos.uminho.pt" },
        { name = "Mário Rodrigues", email = "a100109@alunos.uminho.pt" },
    ]

    readme = "README.md"
    license = { file = "LICENSE" }

    requires-python = ">=3.12"

    keywords = [ "ai", "graph", "algorithms" ]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Environment :: Console",
        "Intended Audience :: Education",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Langunage :: Python",
        "Programming Langunage :: Python :: 3",
        "Topic :: Education",
        "Topic :: System :: Networking"
    ]

    dependencies = ["readerwriterlock", "inotify_simple"]

[project.urls]
    Homepage = "https://github.com/mariorodrigues10/CC"
    Repository = "https://github.com/mariorodrigues10/CC"
    "Bug Tracker" = "https://github.com/mariorodrigues10/CC/issues"

[tool.setuptools]
py-modules = []

[tool.mypy]
    disallow_untyped_defs = true
    ignore_missing_imports = true
